<resources>
    <string name="app_name">PraAssesment1Yudha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hitung">Hitung</string>
    <string name="mpanjang">Masukan Panjang</string>
    <string name="mlebar">Masukan Lebar</string>
    <string name="mhasilp">Hasil Muncul Disini</string>
    <string name="mshare">Share</string>
    <string name="malas">Masukan Alas</string>
    <string name="mtinggi">Masukan Tinggi</string>
    <string name="mnim">6706180083</string>
    <string name="mnama">Yudha Primadiansyah</string>
    <string name="mkelas">D3IF-42-02</string>
    <string name="ppanjang">Persegi Panjang</string>
    <string name="segitiga">Segi Tiga</string>
    <string name="mprasesment">Pra Assesment</string>
    <string name="siku">Segitiga Siku Siku</string>
    <string name="abot">About</string>
</resources>
