<?xml version="1.0" encoding="utf-8"?>

<layout  xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:title="@string/siku"
            tools:context=".Segitiga">
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/et_alas_s" android:layout_marginTop="36dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
                android:hint="@string/malas"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/et_tinggi_s" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_alas_s" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
                android:hint="@string/mtinggi"/>
        <Button
                android:text="@string/hitung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b_hitung_s" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_tinggi_s" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
        <TextView
                android:text="@string/mhasilp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_hasil_s"
                app:layout_constraintTop_toBottomOf="@+id/b_hitung_s" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp"/>
        <Button
                android:text="@string/mshare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b_share_s"
                app:layout_constraintTop_toBottomOf="@+id/tv_hasil_s" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
