<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
                                                       android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       tools:context=".PersegiPanjang">

        <!-- TODO: Update blank fragment layout -->


        <Button
                android:text="@string/hitung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b_persegi" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_lebar_p" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/et_panjang_p" android:layout_marginTop="36dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
                android:hint="@string/mpanjang"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/et_lebar_p" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_panjang_p" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp" android:hint="@string/mlebar"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_hasil_p"
                android:text="@string/mhasilp"
                app:layout_constraintTop_toBottomOf="@+id/b_persegi" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b_share"
                app:layout_constraintTop_toBottomOf="@+id/tv_hasil_p" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:text="@string/mshare"
                android:layout_marginTop="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
