<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:title="@string/mprasesment"
            tools:context=".MainActivity">

        <Button
                android:text="@string/ppanjang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/b_persegi_panjang"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="80dp" android:layout_marginStart="80dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="80dp"
                android:layout_marginRight="80dp"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/b_segitiga" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/b_persegi_panjang"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="80dp"
                android:layout_marginStart="80dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="80dp" android:layout_marginRight="80dp" android:text="@string/segitiga"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>